deployment terminating status
