# backend/docs/swagger.json
@@ -381,7 +381,9 @@
                         "description": "List of deployments",
                         "schema": {
                             "type": "array",
-                            "items": {}
+                            "items": {
+                                "$ref": "#/definitions/templates.Deployment"
+                            }
                         }
                     },
                     "500": {
@@ -3127,6 +3129,29 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "templates.Deployment": {
+            "type": "object",
+            "properties": {
+                "healthy": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "namespace": {
+                    "type": "string"
+                },
+                "template": {
+                    "type": "string"
+                },
+                "terminating": {
+                    "type": "boolean"
                 }
             }
         },
